- fix crash when saving the game in levels with lots of monsters
  (bug introduced in 2.4.4)
- -nodeh option to disable automatic loading of dehacked-in-wad lump
- Unified software and opengl engine into one binary
- Added video mode selection to menu
- Fullscreen setting will only take effect after game restart
- reduce red palette transation if the menu is up, so the menu can still be read

Changes from v2.4.3 to v2.4.4
- Don't fail when a texture name can't be looked up
- Increased several limits - Thanks to entryway and RjY
  - Increased number of sidedef limit to 65534
  - Increased number of vertexes limit to 65535
  - Fixed crash when crossing sectors with very big height differences
- fix crash on E4M8
- New command-line options for setting a window (-window) or fullscreen
  (-nowindow) mode temporarily.
- The maximal supported resolution is increased from 1600x1200 to 2048x1536
- GLBoom will use the closest supported resolution when running fullscreen
- The "RUN" key inverts the autorun state
- Live monsters are highlighted in a different colour on the iddt-automap
- Fixed OpenGL sky rendering in Requiem and Memento Mori
- The "Show coordinates of automap pointer" setting works now
- merged many cleanups and fixes from PrBoom 2.3
- fix translucency map file handle leak
- fix consistency failures in netgames
- prevent crashes at 800x600 caused by rounding errors with naive clipping
- fixed slowdown at 1024x768 on some systems
- ability to play tasdoom demos directly
- -solo-net option is a shortcut for one-player network games
- emulate spechit overflows for dosdoom and tasdoom compatibility
- made several cleanups and fixes

Changes from v2.4.2 to v2.4.3
- Massive speed improvements in higher resolutions taken from Eternity.
  Thanks to SoM and Quasar!!!
- fix bugs in gameplay occuring with gcc-4.1
- Mac OS X: Add "Show Game Folder" to menus, for easy installation of new
  game wads
- Mac OS X: Disable games in popup menu whose wads cannot be found